# llm-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
manifesto_qa/: app.py  chatbot.py  client.py  document_loader.py  example_app.py  models.py  rag_chain.py  rag_memory_chain.py  rag_qa_chain.py  retrievers.py  vector_db.py  vectordb.py
notebooks/: document_loading.ipynb  model_testing.ipynb  rag.ipynb  vector_search.ipynb
notebooks/notes/: document_loading_messy.ipynb  vector_search_messy.ipynb
tutorials/: llama_index_tutorial.ipynb  rag_with_weaviate.ipynb
tutorials/chromadb/: chromadb_tutorial.ipynb
tutorials/llama-index/storage/: default__vector_store.json  docstore.json  index_store.json
tutorials/weaviate/: vector_embeddings_tutorial.ipynb
tutorials/weaviate/notebooks/: langchain_with_weaviate.ipynb  wikipedia_tutorial.ipynb
weaviate/notebooks/: end_to_end_tutorial.ipynb  langchain_with_weaviate.ipynb  vectordb_setup.ipynb  wikipedia_tutorial.ipynb
