[tool.poetry]
name = "manifesto"
version = "0.1.0"
description = ""
authors = ["ed-longbottom <ed.m.longbottom@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.30.3"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
weaviate-client = "^4.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
